--- a/environments/demo-clustergroup-prod/start/utilities-kustomization.yaml
+++ b/environments/demo-clustergroup-prod/start/utilities-kustomization.yaml
@@ -10,7 +10,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: tmc-git-repo
+    name: tmc-gitops-cd
     namespace: tanzu-continuousdelivery-resources
   healthChecks:
     - apiVersion: apps/v1
