--- a/environments/demo-clustergroup-staging/applications/argocd-overlay/kustomization.yaml
+++ b/environments/demo-clustergroup-staging/applications/argocd-overlay/kustomization.yaml
@@ -2,42 +2,42 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-- ../../../../base/applications/wordpress
+- ../../../../base/applications/argocd
 
-namespace: wordpress
+namespace: argocd
 
 commonLabels:
-  app: wordpress
+  app: argocd
 
 
-images:
-- name: mysql
-  newName: harbor.navneetv.com/proxy-cache/library/mysql
-  newTag: "8.0"
-- name: wordpress
-  newName: harbor.navneetv.com/proxy-cache/library/wordpress
-  newTag: "6.1.1-php8.1-apache"
-
-secretGenerator:
-- name: mysql-pass
-  literals:
-  - password=Passw0rd!
-
-patches:
-- target:
-    kind: Certificate
-    name: wordpress-cert
-  patch: |-
-    - op: replace
-      path: /spec/commonName
-      value: wordpress.trvcloud.com
-    - op: replace
-      path: /spec/dnsNames/0
-      value: wordpress.trvcloud.com
-- target:
-    kind: HTTPProxy
-    name: wordpress
-  patch: |-
-    - op: replace
-      path: /spec/virtualhost/fqdn
-      value: wordpress.trvcloud.com
+# images:
+# - name: mysql
+#   newName: harbor.navneetv.com/proxy-cache/library/mysql
+#   newTag: "8.0"
+# - name: wordpress
+#   newName: harbor.navneetv.com/proxy-cache/library/wordpress
+#   newTag: "6.1.1-php8.1-apache"
+# 
+# secretGenerator:
+# - name: mysql-pass
+#   literals:
+#   - password=Passw0rd!
+# 
+# patches:
+# - target:
+#     kind: Certificate
+#     name: wordpress-cert
+#   patch: |-
+#     - op: replace
+#       path: /spec/commonName
+#       value: wordpress.trvcloud.com
+#     - op: replace
+#       path: /spec/dnsNames/0
+#       value: wordpress.trvcloud.com
+# - target:
+#     kind: HTTPProxy
+#     name: wordpress
+#   patch: |-
+#     - op: replace
+#       path: /spec/virtualhost/fqdn
+#       value: wordpress.trvcloud.com
