--- a/base/applications/argocd/namespace2.yaml
+++ b/base/applications/argocd/namespace2.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "demo1234"
   labels:
-    name: "demo1234"
+    kubernetes.io/metadata.name: testns
+    pod-security.kubernetes.io/audit: privileged
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/enforce-version: latest
+  name: testns
