--- a/base/utilities/cert-manager-contour/cert-manager/cert-manager-package-install.yaml
+++ b/base/utilities/cert-manager-contour/cert-manager/cert-manager-package-install.yaml
@@ -9,7 +9,7 @@ metadata:
     kapp.k14s.io/update-strategy: "fallback-on-replace"
     kapp.k14s.io/create-strategy: "fallback-on-replace"
   name: cert-manager
-  namespace: tanzu-package-repo-global
+  namespace: tmc-gitops-packages
 spec:            # TK test
   serviceAccountName: cert-manager-packages-sa
   packageRef:
