--- a/base/utilities/cert-manager-contour/contour/kustomization.yaml
+++ b/base/utilities/cert-manager-contour/contour/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 - contour-package-install.yaml
 secretGenerator:
 - name: contour-packages-values
-  namespace: tanzu-package-repo-global
+  namespace: tmc-gitops-packages
   files:
   - contour.yaml
   type: Opaque
